// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UploadButton > can open the menu and select an option 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <button
    aria-controls="radix-_r_9_"
    aria-disabled="false"
    aria-expanded="true"
    aria-haspopup="menu"
    aria-labelledby="_r_a_"
    class="_icon-button_1215g_8"
    data-kind="primary"
    data-state="open"
    id="radix-_r_8_"
    role="button"
    style="--cpd-icon-button-size: 32px;"
    tabindex="0"
    title="Open attachment menu"
    type="button"
  >
    <div
      class="_indicator-icon_147l5_17"
      style="--cpd-icon-button-size: 100%;"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 22q-2.3 0-3.9-1.6T6 16.5V6q0-1.65 1.175-2.825T10 2t2.825 1.175T14 6v9.5q0 1.05-.725 1.775T11.5 18t-1.775-.725T9 15.5V6.75A.73.73 0 0 1 9.75 6a.73.73 0 0 1 .75.75v8.75q0 .424.287.712.288.288.713.288.424 0 .713-.288a.97.97 0 0 0 .287-.712V6q0-1.05-.725-1.775T10 3.5t-1.775.725T7.5 6v10.5q0 1.65 1.175 2.825T11.5 20.5t2.825-1.175T15.5 16.5V6.75a.73.73 0 0 1 .75-.75.73.73 0 0 1 .75.75v9.75q0 2.3-1.6 3.9T11.5 22"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`UploadButton > renders a default button 1`] = `
<div>
  <button
    aria-disabled="false"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-labelledby="_r_2_"
    class="_icon-button_1215g_8"
    data-kind="primary"
    data-state="closed"
    id="radix-_r_0_"
    role="button"
    style="--cpd-icon-button-size: 32px;"
    tabindex="0"
    title="Open attachment menu"
    type="button"
  >
    <div
      class="_indicator-icon_147l5_17"
      style="--cpd-icon-button-size: 100%;"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 22q-2.3 0-3.9-1.6T6 16.5V6q0-1.65 1.175-2.825T10 2t2.825 1.175T14 6v9.5q0 1.05-.725 1.775T11.5 18t-1.775-.725T9 15.5V6.75A.73.73 0 0 1 9.75 6a.73.73 0 0 1 .75.75v8.75q0 .424.287.712.288.288.713.288.424 0 .713-.288a.97.97 0 0 0 .287-.712V6q0-1.05-.725-1.775T10 3.5t-1.775.725T7.5 6v10.5q0 1.65 1.175 2.825T11.5 20.5t2.825-1.175T15.5 16.5V6.75a.73.73 0 0 1 .75-.75.73.73 0 0 1 .75.75v9.75q0 2.3-1.6 3.9T11.5 22"
        />
      </svg>
    </div>
  </button>
</div>
`;
